--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "rx-retry",
-    "version": "1.1.0",
+    "version": "1.3.0",
     "description": "Package for retries in RxJS, Promises and NestJS",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "prepare": "npm run build"
+        "prepare": "npm run build",
+        "prepublish": "npm run build"
     },
     "keywords": [],
     "author": "Aviv Ben Shahar",
