--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rx-retry",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "description": "Package for retries in RxJS, Promises and NestJS",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -12,14 +12,17 @@
     },
     "keywords": [],
     "author": "Aviv Ben Shahar",
-    "license": "ISC",
+    "license": "MIT",
+    "dependencies": {
+        "@nestjs/common": "^8.0.0",
+        "@nestjs/config": "^2.0.0",
+        "@nestjs/core": "^8.0.0",
+        "rxjs": "^7.5.5"
+    },
     "devDependencies": {
         "typescript": "^4.6.3"
     },
     "files": [
         "lib/**/*"
-    ],
-    "dependencies": {
-        "rxjs": "^7.5.5"
-    }
+    ]
 }
