--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
+        "distribute": "npm run build && npm publish",
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "npm run build",
