--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
+        "lib": ["es2017", "es7", "es6", "DOM"],
+        "declarationMap": true,
+        "sourceMap": true,
+        "rootDir": "./src",
+        "allowSyntheticDefaultImports": true,
     },
     "include": [
         "src"
