--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
         "src"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "src/**/*.spec.ts",
+        "src/**/*.mock.ts"
     ]
 }
