--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rx-retry",
-    "version": "2.0.1",
+    "version": "2.0.3",
     "description": "Package for retries in RxJS, Promises and NestJS",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -8,6 +8,7 @@
         "distribute": "npm run build && npm publish",
         "build": "tsc",
         "test": "jest",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "prepare": "npm run build",
         "prepublish": "npm run build"
     },
