--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rx-retry",
-    "version": "2.1.0",
+    "version": "2.1.1",
     "description": "Package for retries in RxJS, Promises and NestJS",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -34,7 +34,7 @@
         "rxjs": "^7.5.5"
     },
     "peerDependencies": {
-        "@nestjs/common": "^8.0.0"
+        "@nestjs/common": ">=8.0.0"
     },
     "devDependencies": {
         "@nestjs/config": "^2.0.0",
