--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,16 @@
 {
-    "compilerOptions": {
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "outDir": "./lib",
-        "target": "es2016",
-        "module": "commonjs",
-        "declaration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "lib": ["es2017", "es7", "es6", "DOM"],
-        "declarationMap": true,
-        "sourceMap": true,
-        "rootDir": "./src",
-        "allowSyntheticDefaultImports": true,
-    },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "node_modules",
-        "src/**/*.spec.ts",
-        "src/**/*.mock.ts"
-    ]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@tsconfig/node-lts-strictest-esm/tsconfig.json",
+  "compilerOptions": {
+    "module": "esnext",
+    "noUnusedParameters": false,
+    "noUnusedLocals": false,
+    "resolveJsonModule": true
+  },
+  "files": [
+    "esbuild.ts"
+  ],
+  "ts-node": {
+    "esm": true
+  }
 }
