feat: support ci cd and move conventional github agreements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,14 +14,8 @@
         "declarationMap": true,
         "sourceMap": true,
         "rootDir": "./src",
-        "allowSyntheticDefaultImports": true,
+        "allowSyntheticDefaultImports": true
     },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "node_modules",
-        "src/**/*.spec.ts",
-        "src/**/*.mock.ts"
-    ]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
