--- a/package.json
+++ b/package.json
@@ -5,14 +5,25 @@
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
     "scripts": {
-        "distribute": "npm run build && npm publish",
-        "build": "tsc",
+        "prebuild": "rm -rf ./lib",
+        "build": "tsc -p ./src/tsconfig.json",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "lint": "eslint \"{src,test}/**/*.ts\"",
+        "lint:fix": "eslint \"{src,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "prepare": "npm run build",
-        "prepublish": "npm run build"
+        "prepare": "husky install || exit 0",
+        "prepublish": "npm run build",
+        "pre-commit": "pretty-quick --staged"
     },
     "homepage": "https://github.com/Avivbens/rx-retry",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Avivbens/rx-retry.git"
+    },
+    "publishConfig": {
+        "registry": "https://registry.npmjs.org/"
+    },
     "publisher": "Aviv Ben Shahar",
     "maintainers": [
         {
@@ -39,11 +50,24 @@
     "devDependencies": {
         "@nestjs/config": "^2.0.0",
         "@nestjs/testing": "^8.4.4",
-        "@types/jest": "^27.4.1",
-        "jest": "^27.5.1",
+        "@total-typescript/ts-reset": "^0.4.2",
+        "@types/jest": "^29.5.5",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "husky": "^7.0.4",
+        "jest": "^29.7.0",
         "jest-cli": "^27.5.1",
-        "ts-jest": "^27.1.4",
-        "typescript": "^4.6.3"
+        "prettier": "^2.3.2",
+        "pretty-quick": "^3.1.3",
+        "source-map-support": "^0.5.20",
+        "ts-jest": "^29.1.1",
+        "ts-loader": "^9.2.3",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^3.10.1",
+        "typescript": "^4.9.4"
     },
     "files": [
         "lib/**/*"
