--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,30 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "outDir": "./lib",
-        "target": "es2016",
-        "module": "commonjs",
+        "allowSyntheticDefaultImports": true,
+        "baseUrl": "./",
         "declaration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "lib": ["es2017", "es7", "es6", "DOM"],
         "declarationMap": true,
-        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        "incremental": false,
+        "lib": ["es2017", "es7", "es6", "DOM"],
+        "module": "Node16",
+        "noFallthroughCasesInSwitch": false,
+        "noImplicitAny": true,
+        "outDir": "./lib",
+        "removeComments": true,
         "rootDir": "./src",
-        "allowSyntheticDefaultImports": true
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "strictBindCallApply": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": false,
+        "target": "es2017",
+        "useUnknownInCatchVariables": false
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "src/**/*.mock.ts"],
+    "include": ["src/**/*"]
 }
