--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
         "@types/jest": "^27.5.1",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/commit-analyzer": "^9.0.2",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^8.1.0",
+        "@semantic-release/npm": "^9.0.2",
+        "@semantic-release/release-notes-generator": "^10.0.3",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
@@ -62,6 +68,7 @@
         "jest-cli": "^27.5.1",
         "prettier": "^2.3.2",
         "pretty-quick": "^3.1.3",
+        "semantic-release": "^19.0.5",
         "source-map-support": "^0.5.20",
         "ts-jest": "^27.1.5",
         "ts-loader": "^9.2.3",
