--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "@nestjs/common": ">=8.0.0"
     },
     "devDependencies": {
+        "@commitlint/cli": "^18.4.3",
+        "@commitlint/config-conventional": "^18.4.3",
         "@nestjs/config": "^2.0.0",
         "@nestjs/testing": "^8.4.4",
         "@total-typescript/ts-reset": "^0.4.2",
