--- a/.github/workflows/release-master.yaml
+++ b/.github/workflows/release-master.yaml
@@ -25,8 +25,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
               with:
-                  fetch-depth: 0
-                  token: ${{ secrets.GH_TOKEN }}
+                  fetch-depth: 1
 
             - name: 🧪 Check out repository code
               uses: ./.github/workflows/health-check
@@ -46,7 +45,6 @@ jobs:
               uses: actions/checkout@v3
               with:
                   fetch-depth: 0
-                  token: ${{ secrets.GH_TOKEN }}
 
             - name: Git Config
               run: |
@@ -71,7 +69,7 @@ jobs:
 
             - name: Release
               env:
-                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   GIT_AUTHOR_NAME: github-bot
                   GIT_AUTHOR_EMAIL: github-bot@gmail.com
                   GIT_COMMITTER_NAME: github-bot
