--- a/.github/workflows/release-master.yaml
+++ b/.github/workflows/release-master.yaml
@@ -69,7 +69,7 @@ jobs:
 
             - name: Release
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
                   GIT_AUTHOR_NAME: github-bot
                   GIT_AUTHOR_EMAIL: github-bot@gmail.com
                   GIT_COMMITTER_NAME: github-bot
