--- a/package.json
+++ b/package.json
@@ -63,11 +63,14 @@
         "@semantic-release/release-notes-generator": "^10.0.3",
         "@total-typescript/ts-reset": "^0.4.2",
         "@types/jest": "^27.5.1",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
-        "eslint": "^8.0.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.20.0",
+        "@typescript-eslint/parser": "^6.20.0",
+        "eslint": "^8.42.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-deprecation": "^2.0.0",
+        "eslint-plugin-jest": "^27.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-unused-imports": "^3.0.0",
         "husky": "^7.0.4",
         "jest": "^27.5.1",
         "jest-cli": "^27.5.1",
