--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "test": "jest",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "prepare": "husky install || exit 0",
-        "prepublish": "npm run build",
-        "pre-commit": "pretty-quick --staged"
+        "prepublish": "npm run build"
     },
     "engines": {
         "node": ">=16.0.0"
@@ -62,23 +61,24 @@
         "@semantic-release/npm": "^11.0.3",
         "@semantic-release/release-notes-generator": "^10.0.3",
         "@total-typescript/ts-reset": "^0.4.2",
-        "@types/jest": "^27.5.1",
-        "@typescript-eslint/eslint-plugin": "^6.20.0",
-        "@typescript-eslint/parser": "^6.20.0",
-        "eslint": "^8.42.0",
-        "eslint-config-prettier": "^8.8.0",
+        "@types/jest": "^29.5.12",
+        "@typescript-eslint/eslint-plugin": "^7.5.0",
+        "@typescript-eslint/parser": "^7.5.0",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-deprecation": "^2.0.0",
-        "eslint-plugin-jest": "^27.6.1",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-unused-imports": "^3.0.0",
-        "husky": "^7.0.4",
-        "jest": "^27.5.1",
-        "jest-cli": "^27.5.1",
-        "prettier": "^2.3.2",
-        "pretty-quick": "^3.1.3",
+        "eslint-plugin-jest": "^27.9.0",
+        "eslint-plugin-jsonc": "^2.15.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-unused-imports": "^3.1.0",
+        "husky": "^9.0.11",
+        "jest": "^29.7.0",
+        "jest-cli": "^29.7.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
         "semantic-release": "^23.0.0",
         "source-map-support": "^0.5.20",
-        "ts-jest": "^27.1.5",
+        "ts-jest": "^29.1.2",
         "ts-loader": "^9.2.3",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^3.10.1",
